--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="weight">Weight</string>
     <string name="_70_kg">70 kg</string>
     <string name="bmi_calculator">BMI CALCULATOR</string>
+    <string name="age">Age</string>
+    <string name="_18">18</string>
+    <string name="calculate">Calculate</string>
 </resources>
