--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,11 @@
     <string name="male">Male</string>
     <string name="female">Female</string>
     <string name="height">Height</string>
-    <string name="_50_cm">50 cm</string>
     <string name="weight">Weight</string>
-    <string name="_70_kg">70 kg</string>
     <string name="bmi_calculator">BMI CALCULATOR</string>
     <string name="age">Age</string>
-    <string name="_18">18</string>
     <string name="calculate">Calculate</string>
+    <string name="re_calculate">re-calculate</string>
+    <string name="bmi_results">BMI Results</string>
+    <string name="your_results">Your Results</string>
 </resources>
